# aaism-study-app

./: .env.example  .gitignore  AGENTS.md  PAYMENTS.md  README.md  SECURITY.md  TAURI.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: deploy-pages.yml
docs/: APP_STORE.md  MVP-NEXT-ROUND.md
notes/domain-1-ai-governance/: README.md
notes/domain-2-ai-risk/: README.md
notes/domain-3-ai-development/: README.md
notes/domain-4-ai-operations/: README.md
progress/: 00-dashboard.md  01-review-manual-progress.md  02-qae-database-progress.md  03-online-course-progress.md  04-additional-resources-progress.md  05-retake-baseline-and-gap-report.md  06-mixed-timed-practice-tracker.md  07-retake-readiness-gate.md
public/: 404.html
resources/: links-and-references.md
schedule/: retake-4-week-remediation-plan.md  study-schedule.md
scripts/: generate-icons.mjs  prepare-tauri-build.mjs  quality-gate.mjs  run-smoke-tests.mjs  stamp-icon.mjs  sync-tauri-version.mjs  sync-version.mjs
scripts/lib/: version-info.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AIConnectionStatusPill.tsx  AISmokeTestPanel.tsx  AboutPanel.tsx  AchievementToast.tsx  AgentCouncilStrip.tsx  AutoConfigToast.tsx  AutoConfigurationSettings.tsx  CertQuickRef.tsx  CertSwitcher.tsx  CompanyProfileCard.tsx  LabRunner.tsx  (+41 more)
(+146 files in other folders)
