[package]
name = "aaism-intelligence"
version = "1.0.0"
description = "AAISM Intelligence Platform — AI Security Manager exam prep"
authors = ["AAISM"]
edition = "2021"

[lib]
name = "aaism_intelligence_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
