[package]
name = "aegis"
version = "1.0.0"
description = "Aegis — multi-cert study, ops drills, and exam prep"
authors = ["Aegis"]
edition = "2021"

[lib]
name = "aegis_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
